[b]Version 0.6.6[/b]:

(2008-12-28)
 * (Linux) Now the options in the dvd menus can be selected with the mouse.
   To do so, select "Activate option in DVD menus" for the left mouse button
   in Preferences -> Keyboard and mouse.

(2008-12-27)
 * (Linux) Added some actions to control the dvdnav buttons.

(2008-12-26)
 * The language filter in the find subtitles dialog is now saved to the ini 
   file.
 * New option for smplayer.ini: include_lang_on_filename (section 
   [findsubtitles]). If set to true (the default) the language code is 
   appended to the subtitle filename (e.g. video.avi => video_es.srt).
   Otherwise the language code is not appended (video.avi => video.srt).

(2008-12-24)
 * Implemented a different way to select the initial subtitle track (or restore
   the old one after a restart). Still needs some testing.

(2008-12-23)
 * Now smplayer tries to update the subtitle tracks if they change during
   playback. This makes subtitles work if using dvdnav, and seems to fix
   a problem when selecting the initial track 
   (see http://sourceforge.net/tracker/index.php?func=detail&aid=2422574&group_id=185512&atid=913573)
   This is the kind of changes that can break something or produce an 
   unexpected behaviour...

(2008-12-20)
 * Applied with a few changes the patch customStyleAction.patch by
   matt <matt@endboss.org>. It adds a few more functions for the widgetactions,
   like to set a custom style.
 * Added a new gui (mpcgui, a media player classic clone) developed by 
   Matthias Petri <matt@endboss.org>

(2008-12-19)
 * Applied (with a few changes) a patch by matt <matt@endboss.org>.
   This patch adds 3 modes for the stay on top option: always, never and 
   while playing.

(2008-12-12)
 * Added a new option Video->Preview. This option creates a preview 
   (thumbnails) of the selected video. There are options to choose the
   number of columns, rows, maximum width of the generated image...
   Finally the preview can be saved (as jpg or png).